<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory app:title="@string/default_settings_header">

		<ListPreference
			app:defaultValue="-1"
			app:key="@string/default_base_key"
			app:title="@string/default_base_title"
			app:summary="@string/station_summary"
			android:icon="@drawable/ic_home_black_24dp"/>

		<ListPreference
			app:defaultValue="-1"
			app:key="@string/default_target_key"
			app:title="@string/default_target_title"
			app:summary="@string/station_summary"
			android:icon="@drawable/ic_work_black_24dp"/>

	</PreferenceCategory>

	<!--<PreferenceCategory app:title="@string/settings_features">

		<SwitchPreferenceCompat
			android:key="@string/default_live_upgrade_key"
			app:title="@string/live_upgrade_title"
			app:summary="@string/live_update_summary"/>


	</PreferenceCategory> -->
</PreferenceScreen>
