<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/colorBackground"
		android:padding="16dp"
		android:text="@string/nearest_station"
		android:textAlignment="center"
		android:textColor="@color/logo_white"
		android:textSize="26sp" />

	<TextView
		android:id="@+id/station_name_text_view"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="16dp"
		android:text="@string/no_station_match"
		android:textAlignment="center"
		android:textSize="20sp"
		android:textStyle="bold" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<Button
			android:id="@+id/find_station_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/find_nearest_station"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="8dp"
			android:layout_weight="1"/>

		<Button
			android:id="@+id/navigate_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="8dp"
			android:text="@string/navigate"
			android:layout_weight="1"/>

	</LinearLayout>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@drawable/custom_divider_horizontal" />

	<androidx.recyclerview.widget.RecyclerView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layoutAnimation="@anim/layout_animation_fall_down"
		android:id="@+id/recyclerViewList"
		android:layout_marginStart="0dp"
		android:layout_marginEnd="0dp"/>

</LinearLayout>